# cmake-tutorial

example-01/cxx-openmp/: CMakeLists.txt  example.cpp
example-01/hello-world/: CMakeLists.txt
example-03/: CMakeLists.txt
example-05/: CMakeLists.txt
example-05/tests/: CMakeLists.txt
